--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button class="btn" id="check">Check</button>
         </div>
 
-        <p id="display-msg">This is the display-msg</p>
+        <p id="display-msg"></p>
 
         <div id="change-table">
             <table border=1 frame=void rules=rows>
